tests/test_files_pa3/errors/ContBreakOutsideWhile2.ic
class A
{
	static void main(string[] args) { }
	
	void b(int b)
	{
		while (b > 0)
			continue;
			break;			
	}
}